--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
 .header {
   align-items: center;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
   display: flex;
   font-size: 1.4rem;
   height: 7rem;
@@ -18,6 +18,7 @@
 }
 
 .content {
+  background-color: #fff;
   display: flex;
 }
 
@@ -30,7 +31,6 @@
 }
 
 .hotel-view {
-  background-color: orangered;
   flex: 1;
   height: 80rem;
 }
