--- a/css/style.css
+++ b/css/style.css
@@ -216,9 +216,14 @@ body {
   transition: all .2s; }
   .btn-inline:hover {
     color: var(--color-grey-dark-1); }
+    .btn-inline:hover span {
+      margin-left: .8rem; }
   .btn-inline:focus {
     animation: pulsate 1s infinite;
     outline: none; }
+  .btn-inline span {
+    margin-left: .3rem;
+    transition: margin-left .2s; }
 
 @keyframes pulsate {
   0% {
@@ -261,8 +266,9 @@ body {
   align-items: center;
   color: var(--color-grey-dark-3);
   display: flex;
-  font-size: 1.3rem;
-  justify-content: space-between; }
+  font-size: 1.3rem; }
+  .recommend__count {
+    margin-right: auto; }
   .recommend__photo {
     border: 3px solid #fff;
     box-sizing: content-box;
@@ -271,6 +277,50 @@ body {
     width: 4rem; }
     .recommend__photo:not(:last-child) {
       margin-right: -1.5rem; }
+
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  margin-bottom: 3.5rem;
+  overflow: hidden;
+  padding: 3rem;
+  position: relative; }
+  .review::before {
+    color: var(--color-grey-light-2);
+    content: "\201C";
+    font-family: sans-serif;
+    font-size: 20rem;
+    line-height: 1;
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    z-index: 1; }
+  .review__photo {
+    border-radius: 50%;
+    height: 4.5rem;
+    margin-right: 1.5rem;
+    width: 4.5rem; }
+  .review__text {
+    margin-bottom: 2rem;
+    position: relative;
+    z-index: 10; }
+  .review__user {
+    align-items: center;
+    display: flex; }
+  .review__user-box {
+    margin-right: auto; }
+  .review__user-date {
+    color: var(--color-grey-dark-3);
+    font-size: 1rem; }
+  .review__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: .4rem;
+    text-transform: uppercase; }
+  .review__rating {
+    color: var(--color-primary);
+    font-size: 2.2rem;
+    font-weight: 300; }
 
 .container {
   background-color: var(--color-grey-light-2);
@@ -306,16 +356,18 @@ body {
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
   display: flex;
+  font-size: 1.4rem;
   padding: 4.5rem; }
 
 .description {
   background-color: #fff;
   box-shadow: var(--shadow-light);
   flex: 0 0 60%;
-  font-size: 1.4rem;
   margin-right: 4.5rem;
   padding: 3rem; }
 
 .user-reviews {
-  background-color: yellowgreen;
-  flex: 1; }
+  align-items: center;
+  display: flex;
+  flex: 1;
+  flex-direction: column; }
