--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -283,11 +283,20 @@
 
   &:hover {
     color: var(--color-grey-dark-1);
+
+    span {
+      margin-left: .8rem;
+    }
   }
 
   &:focus {
     animation: pulsate 1s infinite;
     outline: none;
+  }
+
+  & span {
+    margin-left: .3rem;
+    transition: margin-left .2s;
   }
 }
 
@@ -382,4 +391,70 @@
       margin-right: -1.5rem;
     }
   }
+}
+
+/////////////////////////////////
+// REVIEWS
+/////////////////////////////////
+
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  margin-bottom: 3.5rem;
+  overflow: hidden;
+  padding: 3rem;
+  position: relative;
+
+  &::before {
+    color: var(--color-grey-light-2);
+    content: "\201C";
+    font-family: sans-serif;
+    font-size: 20rem;
+    line-height: 1;
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    z-index: 1;
+  }
+
+  &__photo {
+    border-radius: 50%;
+    height: 4.5rem;
+
+    margin-right: 1.5rem;
+    width: 4.5rem;
+  }
+
+  &__text {
+    margin-bottom: 2rem;
+    position: relative;
+    z-index: 10;
+  }
+
+  &__user {
+    align-items: center;
+    display: flex;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-date {
+    color: var(--color-grey-dark-3);
+    font-size: 1rem;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: .4rem;
+    text-transform: uppercase;
+  }
+
+  &__rating {
+    color: var(--color-primary);
+    font-size: 2.2rem;
+    font-weight: 300;
+  }  
 }
