--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,48 @@ body {
     font-size: 2.2rem;
     font-weight: 300; }
 
+.cta {
+  padding: 3.5rem 0;
+  text-align: center; }
+  .cta__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    margin-bottom: 2.5rem;
+    text-transform: uppercase; }
+
+.btn {
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  border: none;
+  border-radius: 100px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 300;
+  overflow: hidden;
+  position: relative;
+  text-transform: uppercase; }
+  .btn > * {
+    display: inline-block;
+    height: 100%;
+    transition: all .2s;
+    width: 100%; }
+  .btn__invisible {
+    left: 0;
+    padding: 2rem;
+    position: absolute;
+    top: -100%; }
+  .btn__visible {
+    padding: 2rem 7.5rem; }
+  .btn:focus {
+    animation: pulsate 1s infinite;
+    outline: none; }
+  .btn:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
+  .btn:hover .btn__invisible {
+    top: 0; }
+  .btn:hover .btn__visible {
+    transform: translateY(100%); }
+
 .container {
   background-color: var(--color-grey-light-2);
   box-shadow: var(--shadow-dark);
