--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -458,3 +458,67 @@
     font-weight: 300;
   }  
 }
+
+/////////////////////////////////
+// CTA
+/////////////////////////////////
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+
+  &__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    margin-bottom: 2.5rem;
+    text-transform: uppercase;
+  }
+}
+
+.btn {
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  border: none;
+  border-radius: 100px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 300;
+  overflow: hidden;
+  position: relative;
+  text-transform: uppercase;
+
+  & > * {
+    display: inline-block;
+    height: 100%;
+    transition: all .2s;
+    width: 100%;
+  }
+
+  &__invisible {    
+    left: 0;
+    padding: 2rem;
+    position: absolute;
+    top: -100%;
+  }
+
+  &__visible {
+    padding: 2rem 7.5rem;
+  }
+
+  &:focus {
+    animation: pulsate 1s infinite;
+    outline: none;
+  }
+
+  &:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+  }
+
+  &:hover &__invisible {
+    top: 0;
+  }
+
+  &:hover &__visible {
+    transform: translateY(100%);
+  }
+}
