--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,4 +1,4 @@
-/////////////////////////////////
+////////////////////////////////
 // LOGO
 /////////////////////////////////
 
@@ -16,6 +16,12 @@
   display: flex;
   flex: 0 0 40%;
   justify-content: center;
+
+  @media only screen and (max-width: $bp-xs) {
+    background-color: var(--color-grey-light-2);
+    flex: 0 0 100%;
+    order: 1;
+  }
 
   &__button {
     background-color: var(--color-grey-light-2);
@@ -127,11 +133,23 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media only screen and (max-width: $bp-m) {
+    display: flex;
+    margin: 0;
+  }
+
   &__icon {
     fill: currentColor;
     height: 1.75rem;
     margin-right: 2rem;
     width: 1.75rem;
+
+    @media only screen and (max-width: $bp-s) {      
+      height: 1.5rem;
+      margin-bottom: .7rem;
+      margin-right: 0;
+      width: 1.5rem;
+    }
   }
 
   &__item {
@@ -139,6 +157,14 @@
 
     &:not(:last-child) {
       margin-bottom: .5rem;
+
+      @media only screen and (max-width: $bp-m) {
+        margin: 0;
+      }
+    }
+
+    @media only screen and (max-width: $bp-m) {
+      flex: 1;      
     }
   }
 
@@ -176,6 +202,16 @@
     text-decoration: none;
     text-transform: uppercase;
     z-index: 10;
+
+    @media only screen and (max-width: $bp-m) {
+      justify-content: center;
+      padding: 2rem;
+    }
+
+    @media only screen and (max-width: $bp-s) {      
+      flex-direction: column;
+      padding: 1.5rem .5rem; 
+    }
   }
 }
 
@@ -188,6 +224,10 @@
   font-size: 1.2rem;
   padding: 2.5rem;
   text-align: center;
+
+  @media only screen and (max-width: $bp-m) {
+    display: none;
+  }
 }
 
 /////////////////////////////////
@@ -218,6 +258,11 @@
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-s) {      
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
   }
 
   &__icon-star,
@@ -247,17 +292,29 @@
     justify-content: center;
     margin-left: 3rem;
     padding: 0 2.25rem;
+
+    @media only screen and (max-width: $bp-s) {      
+      padding: 0 1.5rem;
+    }
   }
 
   &__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -3px;
+
+    @media only screen and (max-width: $bp-s) {      
+      font-size: 1.8rem;
+    }
   }
 
   &__rating-count {
     font-size: .8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-s) {      
+      font-size: .5rem;
+    }
   }
 
   &__stars {
@@ -377,7 +434,7 @@
   }
 
   &__friends {
-
+    display: flex;
   }
 
   &__photo {
@@ -388,7 +445,7 @@
     width: 4rem;
 
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
@@ -404,6 +461,11 @@
   overflow: hidden;
   padding: 3rem;
   position: relative;
+
+  @media only screen and (max-width: $bp-m) {  
+    margin-bottom: 3rem;  
+    padding: 2rem;
+  }
 
   &::before {
     color: var(--color-grey-light-2);
@@ -466,6 +528,10 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+
+  @media only screen and (max-width: $bp-m) {   
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 2rem;
