added support for image masks

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -402,20 +402,24 @@
 
   &__item::before {
     // older browsers
-    // background-image: url(../img/chevron-thin-right.svg);
-    // background-size: cover;
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
 
-    background-color: var(--color-primary);
+    // background-color: var(--color-primary);
     content: "";
     display: inline-block;
     height: 1rem;
     margin-right: .7rem;
     width: 1rem;
 
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
-    mask-image: url(../img/chevron-thin-right.svg);
-    mask-size: cover;
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      background-color: var(--color-primary);
+      background-image: none;
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+    }    
   }
 }
 
